--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-sm-4 col-md-4 col-lg-6 col-xl-7" itemscope="" itemtype="http://schema.org/Organization">
                     <!-- logo start -->
-                    <a href="/" itemprop="url"><img class="logo img-responsive" src="//cdn.shopify.com/s/files/1/1236/4838/t/65/assets/logo.png?1366881093076318436" alt="logo" itemprop="logo"></a>
+                    <a href="/" itemprop="url"><img class="logo img-responsive" src="//cdn.shopify.com/s/files/1/1621/6521/t/18/assets/logo.png?6241480550530695121" alt="logo" itemprop="logo"></a>
                     <!-- logo end -->
                 </div>
                 <div class="col-sm-8 col-md-8 col-lg-6 col-xl-5 text-right">
@@ -2058,6 +2058,144 @@
     </div>
     <!-- End CONTENT section -->
 </div>
+
+<footer>
+    <!-- footer-data -->
+    <div class="container inset-bottom-60">
+        <div class="row">
+
+            <div class="col-sm-12 col-md-5 col-lg-6 border-sep-right">
+
+                <div class="footer-logo hidden-xs">
+                    <!--  Logo  -->
+                    <a class="logo" href="https://yourstore-default.myshopify.com"> <img src="//cdn.shopify.com/s/files/1/1621/6521/t/18/assets/logo.png?6241480550530695121" alt="yourstore-default"> </a>
+                    <!-- /Logo -->
+                </div>
+
+
+
+                <div class="box-about">
+                    <div class="mobile-collapse">
+                        <h4 class="mobile-collapse__title visible-xs">ABOUT US</h4>
+                        <div class="mobile-collapse__content">
+                            <p> No more need to look for other ecommerce themes. We provide huge number of different layouts. Yourstore comes packed with free and useful features developed to make your website creation easier. Innovative clean design, advanced functionality, UI made for humans, extensive documenta- tion and support i continue this list infinitely... </p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- subscribe-box -->
+                <div class="subscribe-box offset-top-20">
+                    <div class="mobile-collapse">
+
+                        <h4 class="mobile-collapse__title">NEWSLETTER SIGNUP</h4>
+                        <div class="mobile-collapse__content">
+                            <form action="//myshopify.us11.list-manage.com/subscribe/post?u=0b829b8aff26aaaaa5da602c6&amp;id=293978d1bd" method="post" name="mc-embedded-subscribe-form" target="_blank" class="form-inline">
+                                <input type="text" name="EMAIL" class="subscribe-form__input">
+                                <button type="submit" class="btn btn--ys btn--xl">SUBSCRIBE</button>
+                            </form>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+                <!-- /subscribe-box -->
+
+            </div>
+
+
+            <div class="col-sm-12 col-md-7 col-lg-6 border-sep-left">
+                <div class="row">
+                    <div class="col-sm-4"><div class="mobile-collapse">
+                            <h4 class="text-left  title-under  mobile-collapse__title">INFORMATION</h4>
+                            <div class="v-links-list mobile-collapse__content">
+                                <ul>
+
+                                    <li><a href="/pages/about">About Us</a></li>
+
+                                    <li><a href="/pages/support-24">Customer Service</a></li>
+
+                                    <li><a href="/pages/faq">Privacy Policy</a></li>
+
+                                    <li><a href="/pages/about">Site Map</a></li>
+
+                                    <li><a href="/pages/typography">Search Terms</a></li>
+
+                                    <li><a href="/pages/warranty-and-services">Advanced Search</a></li>
+
+                                    <li><a href="/pages/delivery-page">Orders and Returns</a></li>
+
+                                    <li><a href="/pages/contacts">Contact Us</a></li>
+
+                                </ul>
+                            </div>
+                        </div></div><div class="col-sm-4"><div class="mobile-collapse">
+                            <h4 class="text-left  title-under  mobile-collapse__title">WHY BUY FROM US</h4>
+                            <div class="v-links-list mobile-collapse__content">
+                                <ul>
+
+                                    <li><a href="/pages/warranty-and-services">Shipping &amp; Returns</a></li>
+
+                                    <li><a href="/pages/typography">Secure Shopping</a></li>
+
+                                    <li><a href="/pages/about">International Shipping</a></li>
+
+                                    <li><a href="/pages/delivery-page">Affiliates</a></li>
+
+                                    <li><a href="/pages/support-24">Group Sales</a></li>
+
+                                </ul>
+                            </div>
+                        </div></div><div class="col-sm-4"><div class="mobile-collapse">
+                            <h4 class="text-left  title-under  mobile-collapse__title">MY ACCOUNT</h4>
+                            <div class="v-links-list mobile-collapse__content">
+                                <ul>
+
+                                    <li><a href="https://yourstore-default.myshopify.com/account/login">Sign In</a></li>
+
+                                    <li><a href="https://yourstore-default.myshopify.com/cart">View Cart</a></li>
+
+                                    <li><a href="https://yourstore-default.myshopify.com/pages/wishlist">My Wishlist</a></li>
+
+                                    <li><a href="/pages/support-24">Track My Order</a></li>
+
+                                    <li><a href="/pages/faq">Help</a></li>
+
+                                </ul>
+                            </div>
+                        </div></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="divider divider-md visible-xs visible-sm visible-md"></div>
+    <!-- social-icon -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="social-links social-links--large">
+                    <ul>
+                        <li><a class="icon fa fa-facebook" href="//facebook.com/"></a></li>
+                        <li><a class="icon fa fa-twitter" href="https://www.youtube.com/channel/UCDg7f6PvTo7hdcpPowI3UtA"></a></li>
+                        <li><a class="icon fa fa-google-plus" href="https://www.youtube.com/channel/UCDg7f6PvTo7hdcpPowI3UtA"></a></li>
+                        <li><a class="icon fa fa-instagram" href="https://www.youtube.com/channel/UCDg7f6PvTo7hdcpPowI3UtA"></a></li>
+                        <li><a class="icon fa fa-youtube-square" href="https://www.youtube.com/channel/UCDg7f6PvTo7hdcpPowI3UtA"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /social-icon -->
+    <a href="#" class="btn btn--ys btn--full visible-xs" id="backToTop">Back to top <span class="icon icon-expand_less"></span></a>
+
+</footer>
 
 {% block body %}{% endblock %}
 {% block javascripts %}{% endblock %}
